--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -184,7 +184,11 @@ nav {
 
     }// end section
 
+    
+
 } // end all cards
+
+
 
 main {
     h1 {
@@ -221,7 +225,7 @@ main {
     
 
     h3 {
-        font-weight: $lightWeight;
+        font-weight: $boldWeight;
         display: inline-block; 
         position: relative;
         padding-bottom: 5px; 
@@ -331,3 +335,44 @@ main {
     color: white;
     font-size: 14px;
 }
+
+.button-group {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    margin-top: 1rem;
+    flex-wrap: wrap;
+}
+
+.virtual-tour-btn {
+    background-color: #4e8c78;
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 0.9rem;
+    transition: background-color 0.3s ease;
+}
+
+.virtual-tour-btn:hover {
+    background-color: #3b6c5d;
+}
+
+.extra-content {
+    display: inline-flex;
+    align-items: center;
+    font-size: 0.8rem;
+    color: #333;
+    padding: 0.3rem 0.6rem;
+    gap: 0.3rem;
+    white-space: nowrap; 
+  }
+  
+  .extra-content img {
+    width: 16px;
+    height: 16px;
+    object-fit: contain;
+  }
+  
+  
